# sss

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/app/: App.cpp  App.hpp  State.hpp
src/keyauth/: KeyAuthClient.cpp  KeyAuthClient.hpp  KeyAuthModels.hpp
src/net/: ApiClient.cpp  ApiClient.hpp  HttpClient.cpp  HttpClient.hpp
src/security/: Crypto.cpp  Crypto.hpp  Hwid.cpp  Hwid.hpp  SecureStore.cpp  SecureStore.hpp
src/ui/: Theme.cpp  Theme.hpp
src/ui/Screens/: DashboardScreen.cpp  DashboardScreen.hpp  DownloadScreen.cpp  DownloadScreen.hpp  LoginScreen.cpp  LoginScreen.hpp  SettingsScreen.cpp  SettingsScreen.hpp
src/ui/Widgets/: CopyButton.cpp  CopyButton.hpp  Spinner.cpp  Spinner.hpp  Toasts.cpp  Toasts.hpp
src/util/: Files.cpp  Files.hpp  Log.cpp  Log.hpp  Strings.cpp  Strings.hpp  Time.cpp  Time.hpp  Zip.cpp  Zip.hpp
tests/: crypto_tests.cpp
